--- a/.github/workflows/example-action.yml
+++ b/.github/workflows/example-action.yml
@@ -1,6 +1,9 @@
 name: list-repo
 
-on: push
+on:
+  push:
+    branches:
+      - Main
 
 jobs:
   list-repo-files:
@@ -11,3 +14,11 @@ jobs:
         uses: actions/checkout@v2
       - name: list-dir
         run: ls -laR # Recursively list directory contents
+  count-python-lines:
+    name: Count Lines in python code on repo
+    runs-on: ubuntu-latest
+    steps:
+      - name: install pygount
+        run: pip install pygount
+      - name: count lines in code
+        run: pygount --format=summary .
