--- a/.github/workflows/example-action.yml
+++ b/.github/workflows/example-action.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - main
-
+permissions:
+  contents: read
 jobs:
   list-repo-files:
     name: List files in repository
@@ -21,4 +22,4 @@ jobs:
       - name: install pygount
         run: pip install pygount
       - name: count lines in code
-        run: pygount --format=summary ./source
+        run: pygount --format=summary .
