--- a/.github/workflows/example-action.yml
+++ b/.github/workflows/example-action.yml
@@ -1,25 +1,27 @@
-name: list-repo
+name: Python application
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+
 permissions:
   contents: read
+
 jobs:
-  list-repo-files:
-    name: List files in repository
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: checkout-repo
-        uses: actions/checkout@v2
-      - name: list-dir
-        run: ls -laR # Recursively list directory contents
-  count-python-lines:
-    name: Count Lines in python code on repo
-    runs-on: ubuntu-latest
-    steps:
-      - name: install pygount
-        run: pip install pygount
-      - name: count lines in code
-        run: pygount --format=summary .
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pygount
+    - name: Run pygount in repo
+      run: |
+        pygount --format=summary ./source
